--- a/templates/page1.html
+++ b/templates/page1.html
@@ -3,7 +3,7 @@
 <head>
   <title>Sudoku Login</title>
   <style>
-    body { font-family: Arial, sans-serif; background: radial-gradientd (red, black); text-align: center; }
+    body { font-family: Arial, sans-serif; background: radial-gradient(red, black); text-align: center; }
     .login-box { background:white; padding: 20px; margin: 50px auto; width: 300px; border-radius: 10px; box-shadow: 0 0 10px gray; }
     input { margin: 10px; padding: 8px; width: 80%; }
     button { padding: 10px; width: 90%; cursor: pointer; }
